--- a/index/index.Rmd
+++ b/index/index.Rmd
@@ -22,6 +22,8 @@ header-includes:
     \usepackage{booktabs}
     \usepackage{longtable}
     \usepackage{siunitx}
+    \usepackage{float}
+    \floatplacement{figure}{H}
     \pagestyle{plain}
 output: 
   thesisdown::thesis_pdf: default
