--- a/index/04-chap4.Rmd
+++ b/index/04-chap4.Rmd
@@ -25,9 +25,7 @@ In this study, we used data from the INTERVAL prospective cohort (N=33388) to ex
 
 ### Study population
 
-INTERVAL is a prospective cohort study that initially aimed to test the safety of reducing the time interval between donation of whole blood in 50,000 participants [@DiAngelantonio2017]. Participants were over the age of 18 years, able to provide informed consent and free from a history of major disease. Participants were recruited between June 11th, 2012 and June 15th, 2014 from 25 National Health Service Blood and Transplant (NHSBT) centres across England. They filled out online questionnaires including self-reported height and weight, smoking status and alcohol consumption. Blood samples were also taken at baseline (before randomization within the study) where full blood counts were obtained. The study was approved by Cambridge East Research Ethics Committee. Permission for data access was provided by the Data Access Committee. Data contains sensitive content and requires permission to use therefore cannot be made publicly available. Access to data needs to be approved by the INTERVAL team www.intervalstudy.org.uk/more-information.
-
-The present study was conducted on up to 33 388 European ancestry participants living in the United Kingdom. These were the participants who had genetic data, had basic phenotype data and full blood count measures (Figure \@ref(fig:INTERVAL-STROBE)). Participants were mostly of European descent.
+The present study was conducted on up to 33388 European ancestry INTERVAL participants living in the United Kingdom. These were the participants who had genetic data, had basic phenotype data and full blood count measures (Figure \@ref(fig:INTERVAL-STROBE)). Participants were mostly of European descent.
 
 ```{r INTERVAL-STROBE, echo = FALSE, out.width="80%", fig.cap="A STROBE diagram outlining participants included in the INTERVAL study (N=33388)."}
 include_graphics(path = "figure/BMI_platelets/STROBE_diagram.pdf", dpi = NA)
@@ -57,9 +55,6 @@ column_spec(2, width = "4cm")   %>%
   column_spec(3, width = "6cm")   %>%
   landscape()
 ```
-
-### Genetic data and the association of the genetic risk score (GRS) with BMI
-The genotyping of INTERVAL participants was performed using the Affymetrix GeneTitan® Multi-Channel (MC) Instrument. Quality control (QC) was performed as previously described [@Astle2016]. Imputation was implemented using a combined 1000 Genomes phase-3-UK + 10K reference panel using the Practical Byzantine Fault Tolerance (PBFT) algorithm [@Astle2016]. A genetic instrument for BMI was created by using 654 genetic variants available of the 656 variants which were independently associated with BMI (P<5x10-8) in a recent meta-analysis of GWAS of around 700,000 individuals of European descent [@Yengo2018]. Of these individuals, 450,000 were from UK Biobank and 250,000 were from the Genetic Investigation of Anthropometric Traits (GIANT) consortium. The weighted GRS was made using PLINK 2.0 [@Purcell2007a]. The effect alleles and beta coefficients were extracted from the source GWAS. The weighted score was calculated by multiplying the dosage of each effect alleles by its effect estimate, summing these and dividing by the number of SNPs (654). The GRS therefore reflects the average per-SNP effect on BMI per individual. 
 
 ### Statistical analysis
 Analyses were performed using R version 3.4.2 [@Team2019a]. To visualize correlation between outcome platelet variables, a correlation matrix was made using the pairwise Pearson correlation coefficients of the rank normal transformed data. A dendrogram was also created to show the hierarchical relationship between platelet traits (https://github.com/hughesevoanth/iPVs), where the height at which variables are joined is set at (1 – Pearson correlation coefficient (r)). To explore observational associations between BMI and platelet traits, linear regression models were used (lm() function from “stats” package). Two regression models were used: firstly, adjusting for age and sex and secondly, additionally adjusting for smoking and alcohol consumption as ordinal variables. The results of the regression reflect the change in platelet traits (in normalized SD units) per normalized SD higher BMI (4.7 kg/m^2^). Only participants with all covariables were included in the linear regression models. The associations between potential covariables with both BMI and platelet traits were also explored using linear regression.
